

[project]
name = "genart"
version = "0.1.0"
description = "Generative art in Python"
readme = "README.md"
requires-python = "==3.12"
authors = [
    { name = "Dennis O'Brien", email = "dennis@dennisobrien.net" }
]

dependencies = [
    "cairosvg>=2.5.0",
    "drawsvg>=2.1.0",
    "ipywidgets>=8.0.0",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "pytest>=9.0.1",
]
